<resources>
    <string name="app_name">ReadRoster</string>
    <string name="price">$%d</string>
    <string name="detail_author">by %s</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Keranjang</string>
    <string name="menu_profile">Profile</string>
    <string name="back">Back</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Add to Cart : $%d</string>
    <string name="name_profile">Mohamad Arrizal</string>
    <string name="email_profile">moh.arrizal666@gmail.com</string>
    <string name="total_order">Total pesanan : $%d</string>
    <string name="readroster_reward">ReadRoster Reward</string>
    <string name="search_book">Search Books</string>
    <string name="share_message">Hey, I have redeem %1$d rewards in Dicoding with total %2$d Points. Do you want too?</string>
    <string name="empty_home">Ups! Tidak ada hasil untuk kueri pencarian Anda.</string>
    <string name="empty_cart">Keranjang belanja Anda kosong</string>
</resources>