...
        if (orderBook.isNotEmpty()) {
            LazyVerticalGrid(
                columns = GridCells.Adaptive(160.dp),
                contentPadding = PaddingValues(16.dp),
                horizontalArrangement = Arrangement.spacedBy(16.dp),
                verticalArrangement = Arrangement.spacedBy(16.dp),
                modifier = modifier.testTag("BookList")
            ) {
                items(orderBook, key = { it.book.id }) { data ->
                    BookItem(
                        image = data.book.image,
                        title = data.book.title,
                        author = data.book.author,
...
                            }
                    )
                }
            }
        } else {
            HomeEmpty(
                modifier = modifier.testTag("EmptyHome")
            )
        }
    }
}

@OptIn(ExperimentalMaterial3Api::class)
...
