...
                    onOrderButtonClicked(shareMessage)
                },
                modifier = Modifier.padding(16.dp)
            )
        }
    } else {
        CartEmpty(
            modifier = modifier.testTag("CartEmpty")
        )
    }
}

@Composable
...
